--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ test {
 tasks.withType(Test) {
 	testLogging {
 		events TestLogEvent.FAILED,
+				TestLogEvent.PASSED,
 				TestLogEvent.SKIPPED,
 				TestLogEvent.STANDARD_ERROR,
 				TestLogEvent.STANDARD_OUT
