Updating gradle to show only failed tests?

--- a/build.gradle
+++ b/build.gradle
@@ -25,17 +25,17 @@ test {
 	useJUnitPlatform()
 }
 
-tasks.withType(Test) {
-	testLogging {
-		events TestLogEvent.FAILED,
-				TestLogEvent.PASSED,
-				TestLogEvent.SKIPPED,
-				TestLogEvent.STANDARD_ERROR,
-				TestLogEvent.STANDARD_OUT
-		exceptionFormat TestExceptionFormat.FULL
-		showCauses true
-		showExceptions true
-		showStackTraces true
-		showStandardStreams true
-	}
-}
+//tasks.withType(Test) {
+//	testLogging {
+//		events TestLogEvent.FAILED,
+//				TestLogEvent.PASSED,
+//				TestLogEvent.SKIPPED,
+//				TestLogEvent.STANDARD_ERROR,
+//				TestLogEvent.STANDARD_OUT
+//		exceptionFormat TestExceptionFormat.FULL
+//		showCauses true
+//		showExceptions true
+//		showStackTraces true
+//		showStandardStreams true
+//	}
+//}
